# WrapGL

./: .gitignore  meson.build
include/: core.hpp  glfw.hpp  shader_program.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp  wrapgl_core.hpp
include/wrapgl/: buffer_commons.hpp  data_types.hpp  glfw.hpp  index_buffer.hpp  renderer.hpp  shader_program.hpp  shapes.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp
src/: glfw.cpp  index_buffer.cpp  meson.build  renderer.cpp  shader_program.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/stb_image/: meson.build
tests/: hello_orange.cpp  hello_polygon.cpp  hello_triangle.cpp  hello_window.cpp  meson.build
tests/shaders/red-color/: fragment.glsl
tests/shaders/texture/: fragment.glsl  vertex.glsl
